# Job_Hunte_engeneering

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.lite.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: jobs.yaml  keywords.yaml  sources.yaml  user_profile.yaml
data/: signals.db
docs/: DEPLOY.md
docs/deploy/: gcp.md  hetzner.md
scripts/: classify.py  collect.py  configure_env.sh  daily.py  dashboard.py  deploy.sh  digest.py  doctor.py  feedback.py  jobs.py  schedule.py
src/signal_tracker/: __init__.py  config.py  main.py  pipeline.py
src/signal_tracker/classifier/: __init__.py  feedback.py  llm.py  prompts.py  schemas.py
src/signal_tracker/collectors/: __init__.py  base.py  france_travail.py  gdelt.py  newsapi.py  pappers.py  rss.py
src/signal_tracker/dashboard/: __init__.py  app.py
src/signal_tracker/dashboard/templates/: base.html.j2  index.html.j2  results.html.j2  search.html.j2
src/signal_tracker/jobs/: __init__.py  relevance.py  schemas.py  scraper.py  slug.py
src/signal_tracker/jobs/backends/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  workable.py
src/signal_tracker/notifier/: __init__.py  digest.py  email.py  render.py  scheduler.py
src/signal_tracker/notifier/templates/: digest.html.j2  digest.txt.j2
src/signal_tracker/storage/: __init__.py  db.py  models.py
src/signal_tracker/utils/: __init__.py  dedup.py  http_cache.py  logging.py  normalize.py
tests/: conftest.py  test_classifier_llm.py  test_classifier_schemas.py  test_dashboard.py  test_dashboard_v2.py  test_digest_builder.py  test_digest_render.py  test_email_senders.py  test_feedback.py  test_france_travail_collector.py  test_gdelt_collector.py  test_jobs_backends.py  test_jobs_relevance.py  test_jobs_scraper.py  test_jobs_slug.py  test_newsapi_collector.py  test_pappers_collector.py  test_pipeline.py  test_rss_collector.py  test_scheduler.py  test_skeleton.py
