[project]
name = "signal-tracker"
version = "0.1.0"
description = "Detect weak signals indicating that a company will likely hire in sustainability / AI / ESG / data domains."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Signal Tracker" }]
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "litellm>=1.40.0",
    "tenacity>=8.3.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "vcrpy>=6.0.1",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "apscheduler.*", "litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "live: tests that hit a real LLM/API (skipped by default in CI)",
]
